--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,10 +41,18 @@ dependencies:
   url_launcher: ^6.3.1
   http: ^1.3.0
   share_plus: ^10.1.4
+  flutter_native_splash: ^2.4.4
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.14.3
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/images/logo.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -80,11 +88,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: Mulish
+      fonts:
+        - asset: fonts/Mulish-Bold.ttf
+        - asset: fonts/Mulish-Medium.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
