--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ^3.6.2
+  sdk: ^3.5.3
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -42,6 +42,10 @@ dependencies:
   http: ^1.3.0
   share_plus: ^10.1.4
   flutter_native_splash: ^2.4.4
+  get: ^4.7.2
+  wakelock_plus: ^1.2.10
+  flutter_screenutil: ^5.9.3
+  sensors_plus: ^6.1.1
   
 
 dev_dependencies:
